@@ -3,8 +3,8 @@
  * The CIP4 Software License, Version 1.0
  *
  *
- * Copyright (c) 2001-2010 The International Cooperation for the Integration of 
- * Processes in  Prepress, Press and Postpress (CIP4).  All rights 
+ * Copyright (c) 2001-2017 The International Cooperation for the Integration of
+ * Processes in  Prepress, Press and Postpress (CIP4).  All rights
  * reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -12,7 +12,7 @@
  * are met:
  *
  * 1. Redistributions of source code must retain the above copyright
- *    notice, this list of conditions and the following disclaimer. 
+ *    notice, this list of conditions and the following disclaimer.
  *
  * 2. Redistributions in binary form must reproduce the above copyright
  *    notice, this list of conditions and the following disclaimer in
@@ -20,17 +20,17 @@
  *    distribution.
  *
  * 3. The end-user documentation included with the redistribution,
- *    if any, must include the following acknowledgment:  
+ *    if any, must include the following acknowledgment:
  *       "This product includes software developed by the
- *        The International Cooperation for the Integration of 
+ *        The International Cooperation for the Integration of
  *        Processes in  Prepress, Press and Postpress (www.cip4.org)"
  *    Alternately, this acknowledgment may appear in the software itself,
  *    if and wherever such third-party acknowledgments normally appear.
  *
- * 4. The names "CIP4" and "The International Cooperation for the Integration of 
+ * 4. The names "CIP4" and "The International Cooperation for the Integration of
  *    Processes in  Prepress, Press and Postpress" must
  *    not be used to endorse or promote products derived from this
- *    software without prior written permission. For written 
+ *    software without prior written permission. For written
  *    permission, please contact info@cip4.org.
  *
  * 5. Products derived from this software may not be called "CIP4",
@@ -56,17 +56,17 @@
  * ====================================================================
  *
  * This software consists of voluntary contributions made by many
- * individuals on behalf of the The International Cooperation for the Integration 
+ * individuals on behalf of the The International Cooperation for the Integration
  * of Processes in Prepress, Press and Postpress and was
- * originally based on software 
- * copyright (c) 1999-2001, Heidelberger Druckmaschinen AG 
- * copyright (c) 1999-2001, Agfa-Gevaert N.V. 
- *  
- * For more information on The International Cooperation for the 
+ * originally based on software
+ * copyright (c) 1999-2001, Heidelberger Druckmaschinen AG
+ * copyright (c) 1999-2001, Agfa-Gevaert N.V.
+ *
+ * For more information on The International Cooperation for the
  * Integration of Processes in  Prepress, Press and Postpress , please see
  * <http://www.cip4.org/>.
- *  
- * 
+ *
+ *
  */
 package org.cip4.jdflib.util;
 
@@ -82,7 +82,7 @@ import org.cip4.jdflib.core.VString;
 
 /**
  * @author prosirai
- * 
+ *
  */
 public class SScanf extends ScanfReader implements Iterator<Object>
 {
@@ -91,10 +91,10 @@ public class SScanf extends ScanfReader implements Iterator<Object>
 
 	/**
 	 * creates a scanf reader for a given string and format and returns the approriate object
-	 * 
+	 *
 	 * valid format identifiers %f - returns Double %i - returns Integer %d - returns Integer %x - returns Integer %o -
 	 * returns Integer %c - returns String %s - returns String
-	 * 
+	 *
 	 * @param theString the String to scan
 	 * @param format the formatting String to apply according to c++ sscanf rools
 	 */
@@ -125,8 +125,8 @@ public class SScanf extends ScanfReader implements Iterator<Object>
 
 	/**
 	 * scan a string using C++ sscanf functionality
-	 * @return 
-	 * 
+	 * @return
+	 *
 	 */
 	public Vector<Object> sscanf()
 	{
@@ -137,7 +137,7 @@ public class SScanf extends ScanfReader implements Iterator<Object>
 	}
 
 	/**
-	 * 
+	 *
 	 * @see org.cip4.jdflib.cformat.ScanfReader#scanDouble(org.cip4.jdflib.cformat .ScanfFormat)
 	 */
 	@Override
@@ -150,8 +150,8 @@ public class SScanf extends ScanfReader implements Iterator<Object>
 	}
 
 	/**
-	 * 
-	 * 
+	 *
+	 *
 	 * @see org.cip4.jdflib.cformat.ScanfReader#scanString(org.cip4.jdflib.cformat .ScanfFormat)
 	 */
 	@Override
@@ -171,7 +171,7 @@ public class SScanf extends ScanfReader implements Iterator<Object>
 	}
 
 	/**
-	 * 
+	 *
 	 * @see java.util.Iterator#hasNext()
 	 */
 	@Override
@@ -194,7 +194,7 @@ public class SScanf extends ScanfReader implements Iterator<Object>
 		try
 		{
 			if ("dxoi".indexOf(fmt.type) >= 0)
-				return new Integer(scanInt(fmt));
+				return Integer.valueOf(scanInt(fmt));
 			if ("f".indexOf(fmt.type) >= 0)
 				return Double.valueOf(scanDouble(fmt));
 			return scanString(fmt);
@@ -214,7 +214,7 @@ public class SScanf extends ScanfReader implements Iterator<Object>
 
 	/**
 	 * NOT IMPLEMENTED - the iterator is only forward
-	 * 
+	 *
 	 * @see java.util.Iterator#remove()
 	 */
 	@Override
@@ -226,7 +226,7 @@ public class SScanf extends ScanfReader implements Iterator<Object>
 
 	/**
 	 * convenience static function - see the constructor for details
-	 * 
+	 *
 	 * @param theString
 	 * @param format
 	 * @return Vector of scanned objects - see constructor for details
